test/module/bad-export-empty.txt
;;; ERROR: 1
(module (export))
(;; STDERR ;;;
module/bad-export-empty.txt:2:16: syntax error, unexpected ), expecting TEXT
;;; STDERR ;;)
